# RAG

./: .gitignore  .gitlab-ci.yml  .success  CONTRIBUTING-zh.md  CONTRIBUTING.md  Dockerfile  GPTPRO_PROJECT_CONTEXT.md  LLM_Context.md  Makefile  OFFLINE_DEPLOYMENT_NOTICE.md  RAG前世今生与未来探索.md  README.md  TECH_STACK.md  _auto_pack_db.py  _check.py  _direct_ingest.py  _ingest_now.py  ai_video_generation_script.md  app.js  codex-remote-control-keepalive.mjs  codex_core_bug_report.md  codex_current_task.md  codex_optimization_suggestions.md  evaluation.html  goldwind_data_task.py  index.html  main-uV0KCuhm.js  mkdocs.yml  package-lock.json  package.json  personal-rag-assistant.html  pyproject.toml  reset-codex-remote-control.ps1  styles.css  先看这里_项目成果总览.md  逻辑结构图.html
.codex_temp_github_sync/: frontend_check.js  index.html  prefix_check.js  styles.css  subset.js
.devcontainer/: devcontainer.json  postCreateCommand.sh
00_项目成果总览_先看这里/: 命名重构说明_旧目录到新目录.md
01_企划书/: 方向C_动力装备知识库与智能体_企划书.tex  方向C_动力装备知识库与智能体_企划书_v2.tex  方向C_动力装备知识库与智能体_企划书_v3.tex
04_参考资料/: Agentic_RAG系统开发.docx
05_组会记录/: 2026-04-14_知识图谱抽取方案补充调研.md  知识图谱方案_Proposal.md
06_成果展示/: project-1-at-2026-04-09-07-02-f7d8cb93.json  requirements.txt
GraphRAG阅读材料/: 04_LlamaIndex_Property_Graph_Index_Documentation.html  download_manifest.json
RAG交付/: 说明.md
api_server/: README.md
apps/jiwenlong-rag-console/chroma_rag_poc/: pyproject.toml
apps/jiwenlong-rag-console/chroma_rag_poc/frontend/: index.css  index.js
apps/jiwenlong-rag-console/chroma_rag_poc/src/chroma_rag_poc/: api.py  benchmark.py  chunking.py  cleaning.py  embeddings.py  parsing.py  pipeline.py
apps/jiwenlong-rag-console/chroma_rag_poc/tests/: test_pipeline.py
archive/: README.md
configs/: README.md  __init__.py  default_config.json  public_books_text_filter_rules.yaml
core_domain/: README.md  __init__.py
data_pipeline/: README.md  __init__.py  document_intake.py  external_document_parsers.py
docs/: 424_followup_execution_plan.md  424_meeting_deep_analysis.md  OPEN_SOURCE_90_QUALITY_GATE.md  OPEN_SOURCE_READINESS.md  PROJECT_REVIEW_AND_INTRODUCTION_2026-06-21.md  RAG成熟项目最佳实践接入.md  TECHNICAL_STACK_GRAPH.md  index.md  modules.md  observability_plan.md  pipeline-prototype.md  rag_full_engineering_blueprint.md  reorganization_report.md  repository-layout.md  survey_summary.md  清华燃气轮机知识库顶尖对标与验收标准.md
electron/: README.md  main.cjs  preload.cjs
evaluation/: FULL_CHAIN_EVALUATION_GUIDE.md  README.md  __init__.py  benchmark_quality_gate.py  external_benchmark_loader.py  harness.py  metrics.py  promoted_regression_fixtures.py  quality_profiles.py  runner.py  smoke.py  system_eval_questions.jsonl  triage_regression.py
experiments/: README.md  __init__.py
frontend_app/: README.md
goldwind_decoded/: analysis_report.json
html_ppt/: PPT主视觉图片分镜说明.md  PowerRAG_期末汇报_HTML_PPT.html  PowerRAG_期末汇报_系统大盘与评测解析.html  PowerRAG_期末汇报_背诵稿.md  PowerRAG_期末汇报_融合版演讲稿.md  PowerRAG_期末汇报_融合版演讲稿.tex  PowerRAG_期末汇报_融合版演讲稿_精简版.tex  evaluation.html  index.html  ~$PowerRAG_GraphRAG_期末汇报_白底生成素材版.pptx  汇报作战稿.md  项目探索过程审查报告.md
integrations/: __init__.py  external_backends.py
kg_pipeline/: README.md  community_detection.py  community_summary.py
model_adapters/: README.md  __init__.py  embedding.py  llm.py  local_models.py  reranker.py
mooncake-material-studio/: .npmrc  design-qa.md  package-lock.json  package.json
observability/: README.md  README_run_records.md  __init__.py  run_record_schema.json
paper_assets/: README.md
(+8189 files in other folders)
