[project]
name = "power-equipment-rag-workspace"
version = "0.1.0"
description = "Workspace for the power-equipment RAG console, prototype pipelines, and archived experiments."
authors = [{ name = "Power Equipment RAG Team" }]
keywords = ["rag", "chromadb", "knowledge-base", "power-equipment"]
requires-python = ">=3.11,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb>=0.5.23",
    "fastapi>=0.135.3",
    "jieba>=0.42.1",
    "numpy>=2.3.4",
    "orjson>=3.11.8",
    "pydantic>=2.13.0",
    "pypdf>=6.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "rank-bm25>=0.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=4.46.3",
    "uvicorn>=0.44.0",
]

[project.urls]
Homepage = "https://github.com/JavonLoong/RAG"
Repository = "https://github.com/JavonLoong/RAG"
Documentation = "https://github.com/JavonLoong/RAG"

[project.scripts]
power-rag-prototype = "power_rag_pipeline.pipeline:main"

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mypy>=0.991",
    "pre-commit>=2.20.0",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "tox-uv>=1.11.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["data_pipeline/prototype/power_rag_pipeline"]

[tool.mypy]
files = ["data_pipeline/prototype", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests/regression", "tests/performance"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["power_rag_pipeline"]
