[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chroma-rag-poc"
version = "2.0.0"
description = "动力装备知识库 RAG Pipeline — 合并优化版（模块化架构 + 混合检索 + 暗色前端）"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.3,<0.6",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10",
  "numpy>=1.26",
  "sentence-transformers>=3.0",
  "transformers>=4.41,<5",
  "huggingface-hub>=0.23,<1",
  "posthog>=2.4,<6",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "jieba>=0.42",
  "rank-bm25>=0.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]
